Использовано Moxy для реализации MVP ProfileFragment и ProjectsFragment

--- a/app/src/main/res/layout/v_profile.xml
+++ b/app/src/main/res/layout/v_profile.xml
@@ -48,4 +48,11 @@
         android:layout_alignStart="@id/tv_created_on_details"
         android:layout_below="@id/tv_created_on_details" />
 
+    <Button
+        android:id="@+id/btn_user_projects"
+        android:text="Все проекты"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/iv_profile"/>
+
 </RelativeLayout>
