--- a/app/src/main/res/layout/v_profile.xml
+++ b/app/src/main/res/layout/v_profile.xml
@@ -50,7 +50,7 @@
 
     <Button
         android:id="@+id/btn_user_projects"
-        android:text="Все проекты"
+        android:text="@string/all_projects"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/iv_profile"/>
