--- a/app/src/main/res/layout/li_projects.xml
+++ b/app/src/main/res/layout/li_projects.xml
@@ -1,49 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="8dp">
 
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:contentDescription="@string/content_description" />
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:id="@+id/tv_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_toEndOf="@id/image"
-        android:layout_toRightOf="@id/image"
-        android:textColor="@color/colorAccent"
-        android:textStyle="bold" />
+    <data class="ProjectBinding">
 
-    <TextView
-        android:id="@+id/tv_username"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@id/tv_name"
-        android:layout_alignStart="@id/tv_name"
-        android:layout_below="@id/tv_name" />
+        <variable
+            name="project"
+            type="com.elegion.test.behancer.ui.projects.ProjectListItemViewModel" />
+        
+        <variable
+            name="onItemClickListener"
+            type="com.elegion.test.behancer.ui.projects.ProjectsAdapter.OnItemClickListener" />
+    </data>
 
-    <TextView
-        android:id="@+id/tv_published"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@id/tv_username"
-        android:layout_alignStart="@id/tv_username"
-        android:layout_below="@id/tv_username" />
-
-    <View
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@id/image"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:background="@color/colorPrimary" />
+        android:onClick="@{()->onItemClickListener.onItemClick(project.username)}">
 
-</RelativeLayout>
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            app:imageUrl="@{project.imageUrl}"
+            android:contentDescription="@string/content_description" />
+
+        <TextView
+            android:id="@+id/tv_name"
+            android:text="@{project.name}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_toEndOf="@id/image"
+            android:layout_toRightOf="@id/image"
+            android:textColor="@color/colorAccent"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tv_username"
+            android:text="@{project.username}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_name"
+            android:layout_alignStart="@id/tv_name"
+            android:layout_alignLeft="@id/tv_name" />
+
+        <TextView
+            android:id="@+id/tv_published"
+            android:text="@{project.publishedOn}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_username"
+            android:layout_alignStart="@id/tv_username"
+            android:layout_alignLeft="@id/tv_username" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_below="@id/image"
+            android:layout_marginTop="8dp"
+            android:background="@color/colorPrimary" />
+    </RelativeLayout>
+</layout>
