--- a/app/src/main/res/layout/fr_profile.xml
+++ b/app/src/main/res/layout/fr_profile.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:bind="http://schemas.android.com/apk/res-auto">
+    xmlns:bind="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/tools">
 
     <data class="ProfileBinding">
 
         <import
             alias="V"
             type="android.view.View" />
+
+        <variable
+            name="user"
+            type="com.elegion.test.behancer.data.model.user.User" />
 
         <variable
             name="vm"
@@ -28,10 +33,12 @@
 
             <include
                 layout="@layout/v_profile"
+                app:user="@{user}"
                 android:visibility="@{vm.isErrorVisible ? V.GONE : V.VISIBLE}" />
 
             <include
                 layout="@layout/v_error"
+                app:vm="@{vm}"
                 android:visibility="@{vm.isErrorVisible ? V.VISIBLE : V.GONE}" />
 
         </LinearLayout>
