--- a/app/src/main/res/layout/fr_projects.xml
+++ b/app/src/main/res/layout/fr_projects.xml
@@ -35,9 +35,14 @@
                 bind:clickHandler="@{vm.onItemClickListener}"
                 bind:data="@{vm.projects}" />
 
-            <include
-                layout="@layout/v_error"
-                android:visibility="@{vm.isErrorVisible ? V.VISIBLE : V.GONE}" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:visibility="@{vm.isErrorVisible ? V.VISIBLE : V.GONE}">
+                <include
+                    layout="@layout/v_error"/>
+            </LinearLayout>
         </LinearLayout>
     </android.support.v4.widget.SwipeRefreshLayout>
 </layout>
