Используется LiveData для отображения списка проектов. PagedList для постраничного отображения списка проектов из БД.

--- a/app/src/main/res/layout/fr_profile.xml
+++ b/app/src/main/res/layout/fr_profile.xml
@@ -33,7 +33,7 @@
 
             <include
                 layout="@layout/v_profile"
-                app:user="@{user}"
+                app:user="@{vm.user}"
                 android:visibility="@{vm.isErrorVisible ? V.GONE : V.VISIBLE}" />
 
         <LinearLayout
