--- a/app/src/main/res/layout/fr_projects.xml
+++ b/app/src/main/res/layout/fr_projects.xml
@@ -11,7 +11,7 @@
 
         <variable
             name="vm"
-            type="com.elegion.test.behancer.ui.projects.ProjectsViewModel" />
+            type="com.elegion.test.behancer.ui.BaseProjectsViewModel" />
 
     </data>
 
