--- a/app/src/main/res/layout/v_profile.xml
+++ b/app/src/main/res/layout/v_profile.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:bind="http://schemas.android.com/tools">
 
     <data class = "ProfileItemBinding">
 
@@ -10,6 +11,9 @@
             name="user"
             type="com.elegion.test.behancer.data.model.user.User" />
 
+        <variable
+            name="vm"
+            type="com.elegion.test.behancer.ui.profile.ProfileViewModel" />
     </data>
 
 
